@@ -1,87 +1,101 @@
 package com.studiomediatech.todomvc;
 
-import java.util.Iterator;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.function.UnaryOperator;
 
-import com.google.common.collect.Lists;
 
-public class TodoService {
+public final class TodoService {
 
-  private static final Map<String, Todo> todos = new LinkedHashMap<>();
+    private final Map<String, Todo> todos = new ConcurrentHashMap<>();
+    private final AtomicBoolean hidden = new AtomicBoolean(false);
 
-  private static String filter = "all";
+    public void addNewTodo(String text) {
 
-  public List<Todo> getTodos() {
-    if (filter.equals("active")) {
-      return todos.values().stream().filter((t) -> t.isActive()).collect(Collectors.toList());
+        Todo todo = Todo.valueOf(text);
+        todos.put(todo.getId(), todo);
     }
-    else if (filter.equals("completed")) {
-      return todos.values().stream().filter((t) -> t.isCompleted()).collect(Collectors.toList());
+
+
+    public List<Todo> getActiveTodos() {
+
+        return todos.values().stream().filter(Todo::isActive).toList();
     }
 
-    return Lists.newArrayList(todos.values());
-  }
 
-  public void addNewTodo(String todo) {
-    Todo t = new Todo(todo);
-    todos.put(t.getId(), t);
-  }
+    public List<Todo> getCompletedTodos() {
 
-  public void toggleStatus(String id) {
-    todos.put(id, todos.get(id).toggleStatus());
-  }
-
-  public void deleteTodo(String id) {
-    todos.remove(id);
-  }
-
-  public void editTodo(String id) {
-    todos.put(id, todos.get(id).toggleEdit());
-  }
-
-  public void updateTodo(String id, String todo) {
-    todos.put(id, todos.get(id).updateTodo(todo).toggleEdit());
-  }
-
-  public void markAllCompleted() {
-    todos.replaceAll((id, t) -> t.markCompleted());
-  }
-
-  public void clearCompleted() {
-    Iterator<Todo> it = todos.values().iterator();
-    while (it.hasNext()) {
-      if (it.next().isCompleted()) {
-        it.remove();
-      }
+        return todos.values().stream().filter(Todo::isCompleted).toList();
     }
-  }
 
-  public String getFilter() {
-    return filter;
-  }
 
-  public boolean isFilter(String f) {
-    return filter.equals(f);
-  }
+    public void editTodo(String id) {
 
-  public void setFilter(String filter) {
-    TodoService.filter = filter;
-  }
-
-  public boolean hasTodos() {
-    return !todos.isEmpty();
-  }
-
-  public boolean hasFilteredTodos() {
-    if (filter.equals("active")) {
-      return todos.values().stream().filter((t) -> t.isActive()).count() > 0;
+        updateTodoById(id, Todo::markAsBeingEdited);
     }
-    else if (filter.equals("completed")) {
-      return todos.values().stream().filter((t) -> t.isCompleted()).count() > 0;
+
+
+    public void updateTodo(String id, String update) {
+
+        updateTodoById(id, todo -> todo.updateTodo(update));
     }
-    return hasTodos();
-  }
+
+
+    public void completeTodoItem(String id) {
+
+        updateTodoById(id, Todo::markCompleted);
+    }
+
+
+    public void activateTodoItem(String id) {
+
+        updateTodoById(id, Todo::markActive);
+    }
+
+
+    private void updateTodoById(String id, UnaryOperator<Todo> operation) {
+
+        Optional.ofNullable(todos.get(id))
+            .map(operation)
+            .ifPresent(updated -> todos.put(updated.getId(), updated));
+    }
+
+
+    public void deleteTodoItem(String id) {
+
+        todos.remove(id);
+    }
+
+
+    public void hideCompleted(String toggle) {
+
+        this.hidden.set(true);
+    }
+
+
+    public void showCompleted(String toggle) {
+
+        this.hidden.set(false);
+    }
+
+
+    public void clearCompleted(String clear) {
+
+        todos.entrySet().removeIf(e -> e.getValue().isCompleted());
+    }
+
+
+    public boolean isHidden() {
+
+        return hidden.get();
+    }
+
+
+    public boolean isEditing() {
+
+        return todos.values().stream().anyMatch(Todo::isEditing);
+    }
 }
